/*
 * $Id: ChangeLog,v 1.5296 2007/01/12 15:36:35 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-01-12 11:43 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/classes.c
    * Commented remenants TraceLog() calls.

2007-01-12 11:34 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/profiler.prg
    * Fixed typo in setting of cClass in gatherMethods()

2006-01-12 11:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * contrib/hbzlib/zipplatform.cpp
    ! minor fix to make bcc 5.8.2 happy

2007-01-12 10:09 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/win32ole.prg
    * Corrected memory leak related to string argument passed BYREF

2007-01-11 22:01 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/cdpapi.c
    ! added two missing protections agains controll code translations

2007-01-11 08:55 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.bc
    - removed ct.lib from hbmake, hbtest, hbrun and hbdoc rules implemented
      by me on last commit.

  * source/rtl/alert.prg
    + added call to hb_ctWxxx functions directly by alert() to avoid the
      need of link ct.lib by users. This is a workaround for a while.

2007-01-11 02:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/xharbour.spec
    * changed version number to 0.99.71

  * xharbour/config/w32/bcc32.cf
  * xharbour/config/w32/xcc.cf
    + added pcrepos library

  * xharbour/contrib/rdd_ads/adsfunc.c
    * use ISBYREF() macro instead of hb_param( <i>, HB_IT_BYREF ) to
      check if parameter is passed by reference

  * xharbour/include/hbapi.h
  * xharbour/include/hbapifs.h
  * xharbour/include/hbdefs.h
  * xharbour/source/common/hbstr.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/delim1.c
  * xharbour/source/rdd/sdf1.c